<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDismiss"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:adjustViewBounds="true"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/image_cancel" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/image_no_intrenet" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/human_sans_medium"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/whoops"
        android:textColor="@color/text_main"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/human_sans_regular"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/no_internet"
        android:textColor="#90000000"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/human_sans_medium"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:text="@string/try_again"
        android:textColor="@color/text_main"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

</LinearLayout>
