<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:id="@+id/btnMenu"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/rounded_rect"
            app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
            app:layout_constraintEnd_toStartOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleTextView">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_menu" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:fontFamily="@font/human_sans_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_main"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/topView"
            app:layout_constraintEnd_toStartOf="@+id/btnStatic"
            app:layout_constraintStart_toEndOf="@+id/btnMenu"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/btnStatic"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/rounded_rect"
            app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="@+id/titleTextView">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_bell" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/card_gradient_blue"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/human_sans_regular"
                    android:text="@string/delivered"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDelivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/_0_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/_18sdp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/human_sans_regular"
                    android:text="@string/trashed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTrashed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/_0_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:fontFamily="@font/human_sans_medium"
            android:gravity="center"
            android:text="@string/recent_orders"
            android:textColor="@color/text_main"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderTextView"
            app:tabBackground="@drawable/tab_background"
            app:tabGravity="fill"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabMode="scrollable"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/text_main" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/bottomView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <LinearLayout
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/_0_0"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/sales"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/_0_0"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/revenue"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtWaste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/_0_0"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/human_sans_medium"
                    android:text="@string/waste"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/placeholderView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:clickable="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:padding="@dimen/_50sdp"
                android:src="@drawable/image_close" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
